--- a/TimeSet_andorid/app/src/main/res/layout/activity_forget.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_forget.xml
@@ -26,7 +26,7 @@
             android:layout_marginLeft="120dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="忘记密码"
+            android:text="手机验证"
             android:textColor="@color/FloralWhite"
             android:textSize="20dp" />
     </LinearLayout>
