--- a/TimeSet_andorid/app/src/main/res/layout/app_bar_main.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/app_bar_main.xml
@@ -5,21 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
+    <ImageView
+        android:onClick="drawerOnClick"
+        android:background="@drawable/touxiang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <include layout="@layout/content_main" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
