--- a/TimeSet_andorid/app/src/main/res/layout/fragment_home.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/fragment_home.xml
@@ -5,38 +5,38 @@
     android:background="#f6f5ec"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <LinearLayout
-        android:background="#7adfb8"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8">
-        <ImageView
-            android:id="@+id/img"
-            android:src="@drawable/touxiang"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-        <TextView
-            android:text="记录生活"
-            android:textSize="20dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="5dp"
-            android:textColor="#ffffff"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="match_parent" />
+<!--    <LinearLayout-->
+<!--        android:background="#7adfb8"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="8">-->
+<!--        <ImageView-->
+<!--            android:id="@+id/img"-->
+<!--            android:src="@drawable/touxiang"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"/>-->
+<!--        <TextView-->
+<!--            android:text="记录生活"-->
+<!--            android:textSize="20dp"-->
+<!--            android:gravity="center_vertical|center_horizontal"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:textColor="#ffffff"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_weight="4"-->
+<!--            android:layout_height="match_parent" />-->
 
-        <TextView
-            android:text="设置"
-            android:textSize="20dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="5dp"
-            android:textColor="#ffffff"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+<!--        <TextView-->
+<!--            android:text="设置"-->
+<!--            android:textSize="20dp"-->
+<!--            android:gravity="center_vertical|center_horizontal"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:textColor="#ffffff"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_height="match_parent" />-->
+<!--    </LinearLayout>-->
     <TextView
         android:background="#ffffff"
         android:orientation="horizontal"
