--- a/TimeSet_andorid/app/src/main/res/menu/activity_main_drawer.xml
+++ b/TimeSet_andorid/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,7 @@
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_setting"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_setting" />
         <item
             android:id="@+id/nav_personal"
