--- a/TimeSet_andorid/app/src/main/res/layout/phone_person.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/phone_person.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-   <!-- <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="#7adfb8">
@@ -26,56 +26,18 @@
             android:layout_marginLeft="120dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="个人信息"
+            android:text="更改账号"
             android:textColor="@color/FloralWhite"
             android:textSize="20dp" />
-    </LinearLayout>-->
+    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_headImg"
-        android:src="@drawable/moren_img"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="100dp"
-        android:layout_height="80dp" />
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dip"
         android:background="@drawable/radius_drawable_bg"
         android:orientation="vertical"
         android:padding="10dip">
-
-        <!-- nicheng -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="50dp"
-                android:src="@drawable/nicheng" />
-
-            <EditText
-                android:layout_weight="1"
-                android:id="@+id/et_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dip"
-                android:background="#00000000"
-                android:hint="昵称"
-                android:padding="5dip"
-                android:textSize="16sp" />
-            <ImageView
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/bianji"
-                android:layout_weight="0.10"
-                android:layout_width="0dp"
-                android:layout_height="30dp" />
-        </LinearLayout>
 
         <!--手机号-->
         <LinearLayout
@@ -97,16 +59,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:background="#00000000"
-                android:hint="手机号"
+                android:hint="变更手机号"
                 android:padding="5dip"
                 android:textSize="16sp" />
-            <ImageView
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/bianji"
-                android:layout_weight="0.10"
-                android:layout_width="0dp"
-                android:layout_height="30dp" />
         </LinearLayout>
 
         <View
@@ -115,8 +70,9 @@
             android:layout_marginBottom="5dip"
             android:layout_marginTop="5dip"
             android:background="#eeeeee" />
-        <!--密码-->
+        <!--验证码-->
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
@@ -125,26 +81,39 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="50dp"
-                android:src="@drawable/mima" />
+                android:src="@drawable/yanzhengma" />
 
             <EditText
-                android:id="@+id/et_password"
-                android:layout_weight="1"
+                android:id="@+id/et_yanzhengma"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
+                android:layout_weight="1"
                 android:background="#00000000"
-                android:hint="密码"
+                android:hint="验证码"
                 android:inputType="textPassword"
                 android:padding="5dip"
                 android:textSize="16sp" />
-            <ImageView
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/bianji"
-                android:layout_weight="0.10"
+
+            <Button
+                android:id="@+id/btn_yanzhengma"
                 android:layout_width="0dp"
-                android:layout_height="30dp" />
+                android:layout_height="40dp"
+                android:layout_weight="0.38"
+                android:background="@drawable/button_radius"
+                android:text="获取验证码"
+                android:textColor="#7adfb8" />
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/btn_submit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/shape_round_button"
+        android:text="确认提交"
+        android:textColor="@color/FloralWhite"
+        android:textSize="18dp" />
 </LinearLayout>
