--- a/TimeSet_andorid/app/src/main/res/layout/input_person_layout.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/input_person_layout.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -54,6 +52,7 @@
             android:layout_marginLeft="10dip"
             android:background="#00000000"
             android:hint="手机号"
+            android:inputType="number"
             android:padding="5dip"
             android:textSize="16sp" />
         <ImageView
