--- a/TimeSet_andorid/app/src/main/res/layout/activity_personal.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_personal.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-   <!-- <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="#7adfb8">
@@ -29,7 +29,7 @@
             android:text="个人信息"
             android:textColor="@color/FloralWhite"
             android:textSize="20dp" />
-    </LinearLayout>-->
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_headImg"
