--- a/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
@@ -1,164 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/maindrawer_layout"
-    android:background="@android:color/darker_gray">
-    <!--左滑栏-->
-    <LinearLayout
-        android:id="@+id/main_left_drawer_layout"
-        android:layout_width="300dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/darker_gray"
+    tools:context=".MainActivity">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/colorAccent"
+        android:background="#f6f5ec"
         android:orientation="vertical">
-        <ImageView
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:src="@mipmap/ic_launcher"
-            android:scaleType="centerCrop"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:text="卢朋娇"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="刘哲"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="边天歌"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="王天"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="赵宁"/>
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:background="#7adfb8"
+            android:orientation="horizontal">
 
-    </LinearLayout>
-    <RelativeLayout android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main_content_layout"
-        android:gravity="center"
-        android:background="@android:color/holo_blue_dark"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-
-        <LinearLayout android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="#f6f5ec"
-            xmlns:android="http://schemas.android.com/apk/res/android" >
-
-            <LinearLayout
-                android:background="#7adfb8"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="8">
-                <ImageView
-                    android:id="@+id/img"
-                    android:src="@drawable/touxiang"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-                <TextView
-                    android:text="记录生活"
-                    android:textSize="20dp"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:layout_marginTop="5dp"
-                    android:textColor="#ffffff"
-                    android:layout_width="0dp"
-                    android:layout_weight="4"
-                    android:layout_height="match_parent" />
-
-                <TextView
-                    android:text="设置"
-                    android:textSize="20dp"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:layout_marginTop="5dp"
-                    android:textColor="#ffffff"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
-            <TextView
-                android:background="#ffffff"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-            <LinearLayout
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:background="@drawable/button_edge"
-                android:orientation="horizontal"
-                android:layout_width="320dp"
-                android:layout_height="0dp"
-                android:layout_weight="6">
-
-                <EditText
-                    android:background="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="20dp"
-                    android:gravity="center"
-                    android:hint="搜索查找记忆中的照片"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textColorHint="#8C8C8C"
-                    android:textCursorDrawable="@null"
-                    android:textSize="14sp"
-                    />
-
-                <ImageView
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:src="@drawable/sousuo" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="70">
-
-                <GridView
-                    android:id="@+id/gride"
-                    android:horizontalSpacing="10dp"
-                    android:verticalSpacing="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:numColumns="2">
-                </GridView>
-            </LinearLayout>
             <ImageView
-                android:id="@+id/jiahao"
-                android:layout_marginBottom="20dp"
-                android:layout_gravity="center"
-                android:src="@drawable/jiaohao"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="8"/>
+                android:id="@+id/img"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/touxiang" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_weight="4"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="记录生活"
+                android:textColor="#ffffff"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="设置"
+                android:textColor="#ffffff"
+                android:textSize="20dp" />
         </LinearLayout>
 
-    </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="#ffffff"
+            android:orientation="horizontal" />
+
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="6"
+            android:background="@drawable/button_edge"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:background="@null"
+                android:gravity="center"
+                android:hint="搜索查找记忆中的照片"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textColorHint="#8C8C8C"
+                android:textCursorDrawable="@null"
+                android:textSize="14sp" />
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:src="@drawable/sousuo" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="70"
+            android:orientation="horizontal">
+
+            <GridView
+                android:id="@+id/gride"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:horizontalSpacing="10dp"
+                android:numColumns="2"
+                android:verticalSpacing="10dp"></GridView>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/jiahao"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="8"
+            android:src="@drawable/jiaohao" />
+    </LinearLayout>
+    <!--左滑栏-->
+    <com.google.android.material.navigation.NavigationView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/nav"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/head"
+        app:menu="@menu/new_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
