--- a/TimeSet_andorid/app/src/main/res/layout/activity_modify_password_by_phone.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_modify_password_by_phone.xml
@@ -11,7 +11,7 @@
         android:background="#7adfb8">
 
         <Button
-            android:id="@+id/btn_return_modify_password"
+            android:id="@+id/btn_return_modify_password2phone"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -20,7 +20,7 @@
             android:layout_marginBottom="6dp"
             android:layout_weight="0.15"
             android:background="@drawable/fanhui32"
-            android:onClick="passwordClick" />
+            android:onClick="phonePasswordClick" />
 
         <TextView
             android:layout_width="0dp"
@@ -46,14 +46,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="250dp"
             android:background="@drawable/rounded_background"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="@dimen/dp10">
-            <!--旧密码-->
+
+            <!--手机号-->
             <LinearLayout
-                android:id="@+id/modify_input_layout_psw0"
+                android:id="@+id/input_layout_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -62,28 +63,29 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/mima" />
+                    android:src="@drawable/phone" />
 
                 <EditText
-                    android:id="@+id/modify_et_password0"
+                    android:id="@+id/modify_et_phone2phone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
                     android:layout_weight="1"
                     android:background="#00000000"
-                    android:hint="旧密码"
-                    android:inputType="textPassword"
+                    android:hint="手机号"
+                    android:inputType="number"
                     android:padding="5dip"
                     android:textSize="16sp" />
+
                 <ImageView
-                    android:id="@+id/modify_iv_pwd0"
+                    android:id="@+id/modify_iv_phone2phone"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="0.15"
-                    android:background="@drawable/error" />
-
+                    android:background="@drawable/error"
+                    android:onClick="passwordPhoneClear" />
             </LinearLayout>
 
             <View
@@ -92,6 +94,40 @@
                 android:layout_marginTop="5dip"
                 android:layout_marginBottom="5dip"
                 android:background="#eeeeee" />
+            <!--验证码-->
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/yanzhengma" />
+
+                <EditText
+                    android:id="@+id/modify_et_yanzhengma2phone"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dip"
+                    android:layout_weight="1"
+                    android:background="#00000000"
+                    android:hint="验证码"
+                    android:inputType="textPassword"
+                    android:padding="5dip"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/modify_btn_yanzhengma2phone"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.38"
+                    android:background="@drawable/button_radius"
+                    android:text="获取验证码"
+                    android:textColor="#7adfb8" />
+            </LinearLayout>
             <!--新密码-->
             <LinearLayout
                 android:id="@+id/modify_input_layout_psw"
@@ -106,7 +142,7 @@
                     android:src="@drawable/mima" />
 
                 <EditText
-                    android:id="@+id/modify_et_password1"
+                    android:id="@+id/modify_et_password2phone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
@@ -118,17 +154,18 @@
                     android:textSize="16sp" />
 
                 <ImageView
-                    android:id="@+id/modify_iv_pwd1"
+                    android:id="@+id/modify_iv_pwd2phone"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="0.15"
-                    android:background="@drawable/error" />
+                    android:background="@drawable/error"
+                    android:onClick="passwordPhoneClear" />
             </LinearLayout>
-
+            <!--确认密码-->
             <LinearLayout
-                android:id="@+id/modify_input_layout_psw2"
+                android:id="@+id/input_layout_psw"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -140,7 +177,7 @@
                     android:src="@drawable/mima" />
 
                 <EditText
-                    android:id="@+id/modify_et_password2"
+                    android:id="@+id/modify_et_password2phone2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
@@ -152,7 +189,7 @@
                     android:textSize="16sp" />
 
                 <ImageView
-                    android:id="@+id/modify_iv_pwd2"
+                    android:id="@+id/modify_iv_pwd2phone2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
@@ -169,42 +206,17 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/password_sure"
+                android:id="@+id/password_sure2phone"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_background"
                 android:gravity="center"
-                android:onClick="passwordClick"
+                android:onClick="phonePasswordClick"
                 android:text="确定"
                 android:textColor="#7adfb8"
                 android:textSize="23dp" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginTop="2dp"
-                android:orientation="horizontal"
-                android:paddingTop="3dp">
 
-                <Button
-                    android:id="@+id/show_password"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:background="#7adfb8"
-                    android:onClick="passwordClick"
-                    android:text="显示密码"
-                    android:textColor="#1E90FF" />
-
-                <Button
-                    android:id="@+id/other_way2_password"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:background="#7adfb8"
-                    android:onClick="passwordClick"
-                    android:text="其他方式"
-                    android:textColor="#1E90FF" />
-            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
