--- a/TimeSet_andorid/app/src/main/res/layout/activity_modify_phone_number.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_modify_phone_number.xml
@@ -11,7 +11,7 @@
         android:background="#7adfb8">
 
         <Button
-            android:id="@+id/btn_return_modify_password"
+            android:id="@+id/btn_return_modify_phone"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -20,7 +20,7 @@
             android:layout_marginBottom="6dp"
             android:layout_weight="0.15"
             android:background="@drawable/fanhui32"
-            android:onClick="passwordClick" />
+            android:onClick="phoneNumberClick" />
 
         <TextView
             android:layout_width="0dp"
@@ -28,7 +28,7 @@
             android:layout_marginLeft="110dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="修改密码"
+            android:text="更改手机"
             android:textColor="@color/FloralWhite"
             android:textSize="20dp" />
     </LinearLayout>
@@ -51,9 +51,9 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="@dimen/dp10">
-            <!--旧密码-->
+            <!--手机号-->
             <LinearLayout
-                android:id="@+id/modify_input_layout_psw0"
+                android:id="@+id/input_layout_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -62,39 +62,39 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/mima" />
+                    android:src="@drawable/phone" />
 
                 <EditText
-                    android:id="@+id/modify_et_password0"
+                    android:layout_weight="1"
+                    android:id="@+id/modify_et_phone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
-                    android:layout_weight="1"
                     android:background="#00000000"
-                    android:hint="旧密码"
-                    android:inputType="textPassword"
+                    android:hint="手机号"
+                    android:inputType="number"
                     android:padding="5dip"
                     android:textSize="16sp" />
                 <ImageView
-                    android:id="@+id/modify_iv_pwd0"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
+                    android:id="@+id/modify_iv_phone"
+                    android:background="@drawable/error"
                     android:layout_weight="0.15"
-                    android:background="@drawable/error" />
-
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:onClick="phoneNumberClick"/>
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-                android:layout_marginTop="5dip"
                 android:layout_marginBottom="5dip"
+                android:layout_marginTop="5dip"
                 android:background="#eeeeee" />
-            <!--新密码-->
+            <!--验证码-->
             <LinearLayout
-                android:id="@+id/modify_input_layout_psw"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -103,62 +103,28 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/mima" />
+                    android:src="@drawable/yanzhengma" />
 
                 <EditText
-                    android:id="@+id/modify_et_password1"
+                    android:id="@+id/modify_et_yanzhengma"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
                     android:layout_weight="1"
                     android:background="#00000000"
-                    android:hint="新密码"
+                    android:hint="验证码"
                     android:inputType="textPassword"
                     android:padding="5dip"
                     android:textSize="16sp" />
 
-                <ImageView
-                    android:id="@+id/modify_iv_pwd1"
+                <Button
+                    android:id="@+id/modify_btn_yanzhengma"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="0.15"
-                    android:background="@drawable/error" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/modify_input_layout_psw2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/mima" />
-
-                <EditText
-                    android:id="@+id/modify_et_password2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_weight="1"
-                    android:background="#00000000"
-                    android:hint="确认密码"
-                    android:inputType="textPassword"
-                    android:padding="5dip"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:id="@+id/modify_iv_pwd2"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="0.15"
-                    android:background="@drawable/error" />
+                    android:layout_height="40dp"
+                    android:layout_weight="0.38"
+                    android:background="@drawable/button_radius"
+                    android:text="获取验证码"
+                    android:textColor="#7adfb8" />
             </LinearLayout>
         </LinearLayout>
 
@@ -169,42 +135,17 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/password_sure"
+                android:id="@+id/phoneNum_sure"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_background"
                 android:gravity="center"
-                android:onClick="passwordClick"
+                android:onClick="phoneNumberClick"
                 android:text="确定"
                 android:textColor="#7adfb8"
                 android:textSize="23dp" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginTop="2dp"
-                android:orientation="horizontal"
-                android:paddingTop="3dp">
 
-                <Button
-                    android:id="@+id/show_password"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:background="#7adfb8"
-                    android:onClick="passwordClick"
-                    android:text="显示密码"
-                    android:textColor="#1E90FF" />
-
-                <Button
-                    android:id="@+id/other_way2_password"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:background="#7adfb8"
-                    android:onClick="passwordClick"
-                    android:text="其他方式"
-                    android:textColor="#1E90FF" />
-            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
