--- a/TimeSet_andorid/app/src/main/res/layout/in_album_add_img.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album_add_img.xml
@@ -6,7 +6,6 @@
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:paddingBottom="2dp"
         android:orientation="horizontal">
         <LinearLayout android:layout_width="0dp"
             android:layout_weight="1"
@@ -53,7 +52,7 @@
         android:layout_width="match_parent"
         android:lines="1"
         android:textSize="5dp"
-        android:text="————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
+        android:text="——————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
         />
     <EditText android:layout_width="match_parent"
         android:layout_height="100dp"
