SkySong4Personal_done

--- a/TimeSet_andorid/app/src/main/res/layout/head.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/head.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="42dp"
         android:src="@drawable/touxiang"/>
     <TextView
+        android:id="@+id/nickName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
