--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -1,153 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#7adfb8"
-        android:orientation="horizontal">
-        <LinearLayout android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            >
-            <ImageButton
-                style="?android:attr/borderlessButtonStyle"
-                android:id="@+id/btn_return1"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/ll_in_album_out">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#7adfb8"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:background="@drawable/fanhui32"
-                />
+                android:layout_weight="1">
+
+                <ImageButton
+                    android:id="@+id/btn_return1"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/fanhui32" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/album_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="8"
+                android:gravity="center"
+                android:textColor="#fff"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="2">
+
+                <TextView
+                    android:id="@+id/btn_search"
+                    android:layout_width="35dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/sousou" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:layout_weight="8"
-            android:id="@+id/album_name"
-            android:textSize="20dp"
-            android:textColor="#fff"
-            android:layout_gravity="center"
-            />
-        <LinearLayout android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            >
-            <TextView
-                android:id="@+id/btn_search"
-                android:layout_width="35dp"
-                android:layout_height="30dp"
-                android:layout_marginRight="5dp"
-               android:background="@drawable/sousou"
-                android:layout_gravity="center"
-                />
-        </LinearLayout>
+            android:lines="1"
+            android:text="—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————-—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
+            android:textSize="5dp" />
 
-    </LinearLayout>
-    <TextView android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:lines="1"
-        android:textSize="5dp"
-        android:text="—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————-—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
-        />
-
-    <LinearLayout
-        android:id="@+id/tab_widget"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.5"
-        android:orientation="horizontal">
         <LinearLayout
-            android:id="@+id/tab_spec_1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/img_1"
-                android:layout_marginBottom="2dp"
-                android:background="@drawable/xiang"
-                android:layout_width="65dp"
-                android:layout_height="60dp" />
-            <TextView
-                android:id="@+id/tv_1"
-                android:text="时间相册"
-                android:textSize="17dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/tab_spec_2"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/img_2"
-                android:background="@drawable/qiu"
-                android:layout_marginBottom="2dp"
-                android:layout_width="60dp"
-                android:layout_height="60dp" />
-            <TextView
-                android:id="@+id/tv_2"
-                android:text="足迹地球"
-                android:textSize="17dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
-<FrameLayout android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="8">
-    <FrameLayout
-        android:id="@+id/tab_content"
-        android:layout_width="match_parent"
-       android:layout_height="match_parent"
-        >
-    </FrameLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <LinearLayout android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-
-            >
-
-        <LinearLayout android:layout_width="match_parent"
+            android:id="@+id/tab_widget"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="10">
-        </LinearLayout>
-            <LinearLayout android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                android:gravity="right"
-                android:layout_weight="1.7">
-                <ImageButton
-                    android:layout_marginRight="20dp"
-                    android:id="@+id/add_img"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:background="@drawable/jiaohao" />
+            android:layout_alignParentBottom="true"
+            android:layout_weight="1.5"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/tab_spec_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/img_1"
+                    android:layout_width="65dp"
+                    android:layout_height="60dp"
+                    android:layout_marginBottom="2dp"
+                    android:background="@drawable/xiang" />
+
+                <TextView
+                    android:id="@+id/tv_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="时间相册"
+                    android:textSize="17dp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/tab_spec_2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/img_2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginBottom="2dp"
+                    android:background="@drawable/qiu" />
+
+                <TextView
+                    android:id="@+id/tv_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="足迹地球"
+                    android:textSize="17dp" />
+            </LinearLayout>
         </LinearLayout>
 
-    </FrameLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8">
 
+            <FrameLayout
+                android:id="@+id/tab_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></FrameLayout>
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
 
-</FrameLayout>
+                    >
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="10"></LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1.7"
+                        android:gravity="right"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+                            android:id="@+id/add_img"
+                            android:layout_width="55dp"
+                            android:layout_height="55dp"
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/jiaohao" />
+                    </LinearLayout>
+                </LinearLayout>
+            </FrameLayout>
+        </FrameLayout>
+    </LinearLayout>
+    <indi.liyi.viewer.ImageViewer
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/iver_show_img">
+
+    </indi.liyi.viewer.ImageViewer>
 </LinearLayout>
+
 
