--- a/TimeSet_andorid/app/src/main/res/layout/activity_search.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_search.xml
@@ -2,34 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="vertical">
 
-   <!-- <LinearLayout
+    <!-- <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="horizontal"
+        >-->
+    <LinearLayout
+        android:id="@+id/ll_search_in_album_out"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-       >-->
+        android:orientation="vertical">
 
         <LinearLayout
-           android:layout_width="320dp"
-           android:layout_height="0dp"
-           android:layout_gravity="center"
-           android:layout_weight="1"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:background="@drawable/button_edge"
-           android:gravity="center"
-           android:orientation="horizontal">
-           <EditText
-               android:id="@+id/et_search"
-               android:layout_width="wrap_content"
-               android:layout_height="match_parent"
-               android:background="@null"
-               android:gravity="center"
-               android:hint="地点/内容/描述"
-               android:paddingRight="10dp"
-               android:textColorHint="#8C8C8C"
-               android:textCursorDrawable="@null"
-               android:textSize="14sp" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:gravity="center"
+                android:hint="地点/内容/描述"
+                android:paddingRight="10dp"
+                android:textColorHint="#8C8C8C"
+                android:textCursorDrawable="@null"
+                android:textSize="14sp" />
 
             <ImageView
                 android:id="@+id/tv_search"
@@ -39,14 +43,14 @@
                 android:src="@drawable/sousuo" />
             <!-- </LinearLayout>-->
 
-        <!-- <EditText
-             android:id="@+id/et_search"
-             android:layout_width="0dp"
-             android:layout_height="45dp"
-             android:layout_weight="9"
-             android:hint="地点/内容/描述"/>
- -->
-       <!-- <TextView
+            <!-- <EditText
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_weight="9"
+            android:hint="地点/内容/描述"/>
+            -->
+            <!-- <TextView
             android:id="@+id/tv_search"
             android:layout_width="0dp"
             android:layout_height="40dp"
@@ -56,31 +60,118 @@
             android:textSize="16dp"
             android:textColor="#fff"
             android:background="@drawable/shape_round_button"/>-->
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ll_no_search"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:gravity="center"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/no_search"/>
-        <TextView
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="没有找到图片"/>
-    </LinearLayout>
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="15"
-        android:id="@+id/lv_search">
+        </LinearLayout>
 
-    </ListView>
+        <LinearLayout
+            android:id="@+id/ll_no_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/no_search" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="没有找到图片" />
+        </LinearLayout>
+
+
+        <ListView
+            android:id="@+id/lv_search"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="15">
+
+        </ListView>
+    </LinearLayout>
+
+    <!--<LinearLayout-->
+    <!--android:layout_width="320dp"-->
+    <!--android:layout_height="40dp"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:background="@drawable/button_edge"-->
+    <!--android:gravity="center"-->
+    <!--android:orientation="horizontal">-->
+
+    <!--<EditText-->
+    <!--android:id="@+id/et_search"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@null"-->
+    <!--android:gravity="center"-->
+    <!--android:hint="地点/内容/描述"-->
+    <!--android:paddingRight="10dp"-->
+    <!--android:textColorHint="#8C8C8C"-->
+    <!--android:textCursorDrawable="@null"-->
+    <!--android:textSize="14sp" />-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/tv_search"-->
+    <!--android:layout_width="35dp"-->
+    <!--android:layout_height="35dp"-->
+    <!--android:padding="10dp"-->
+    <!--android:src="@drawable/sousuo" />-->
+    <!--&lt;!&ndash; </LinearLayout>&ndash;&gt;-->
+
+    <!--&lt;!&ndash; <EditText-->
+    <!--android:id="@+id/et_search"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="45dp"-->
+    <!--android:layout_weight="9"-->
+    <!--android:hint="地点/内容/描述"/>-->
+    <!--&ndash;&gt;-->
+    <!--&lt;!&ndash; <TextView-->
+    <!--android:id="@+id/tv_search"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="40dp"-->
+    <!--android:layout_weight="3"-->
+    <!--android:text="搜索"-->
+    <!--android:gravity="center"-->
+    <!--android:textSize="16dp"-->
+    <!--android:textColor="#fff"-->
+    <!--android:background="@drawable/shape_round_button"/>&ndash;&gt;-->
+    <!--</LinearLayout>-->
+
+    <!--<LinearLayout-->
+    <!--android:id="@+id/ll_no_search"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:gravity="center"-->
+    <!--android:orientation="vertical"-->
+    <!--android:visibility="gone">-->
+
+    <!--<ImageView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@drawable/no_search" />-->
+
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="没有找到图片" />-->
+    <!--</LinearLayout>-->
+
+
+    <!--<ListView-->
+    <!--android:id="@+id/lv_search"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:layout_weight="15">-->
+
+    <!--</ListView>-->
+
+    <indi.liyi.viewer.ImageViewer
+        android:id="@+id/iver_search_show_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></indi.liyi.viewer.ImageViewer>
 
 
 </LinearLayout>
