--- a/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
@@ -39,15 +39,14 @@
                 android:textColor="#ffffff"
                 android:textSize="20dp" />
 
-            <TextView
+            <ImageView
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="40dp"
+                android:id="@+id/sousuo"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal"
-                android:text=""
-                android:textColor="#ffffff"
-                android:textSize="20dp" />
+                android:layout_height="35dp"
+                android:src="@drawable/sousou" />
         </LinearLayout>
 
         <TextView
@@ -56,40 +55,6 @@
             android:layout_weight="1"
             android:background="#ffffff"
             android:orientation="horizontal" />
-
-        <!--<LinearLayout
-            android:layout_width="320dp"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_weight="6"
-            android:background="@drawable/button_edge"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:background="@null"
-                android:gravity="center"
-                android:hint="搜索查找记忆中的照片"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColorHint="#8C8C8C"
-                android:textCursorDrawable="@null"
-                android:textSize="14sp" />
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:gravity="center"
-                android:padding="10dp"
-                android:src="@drawable/sousuo" />
-
-        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="8"
-            android:gravity="center_horizontal|center_vertical"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
@@ -118,12 +83,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:src="@drawable/jiaohao" />
-            <ImageView
-                android:layout_marginLeft="50dp"
-                android:id="@+id/sousuo"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/sousuo" />
         </LinearLayout>
 
     </LinearLayout>
