--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
-    <!--主页面-->
+   <!-- 主页面-->
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -55,22 +55,16 @@
                     android:layout_weight="2">
 
                     <TextView
+                        android:layout_marginTop="6dp"
                         android:id="@+id/btn_time"
                         android:layout_width="35dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center"
                         android:layout_marginRight="5dp"
-                        android:background="@drawable/time" />
+                        android:background="@drawable/can" />
                 </LinearLayout>
 
             </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lines="1"
-                android:text="—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————-—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
-                android:textSize="5dp" />
 
             <LinearLayout
                 android:id="@+id/tab_widget"
